# xmpp-webhook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  spec.yaml
config/: base.toml  base.yaml  local.toml  local.yaml  production.toml  production.yaml
src/: app.rs  config.rs  lib.rs  main.rs  telemetry.rs  templates.rs  xmpp.rs
src/routes/: commit_hook.rs  home.html  home.rs  mod.rs  ping.rs  webhook.rs
src/services/: mod.rs  xmpp_handle.rs  xmpp_service.rs
src/webhook/: format.rs  mod.rs  types.rs  workflow_runs_store.rs
templates/: issue_comment__created.md.j2  issues__closed.md.j2  issues__opened.md.j2  issues__reopened.md.j2  push.md.j2  release__prereleased.md.j2  release__released.md.j2  workflow_run__completed.md.j2
tests/api/: helpers.rs  main.rs  webhook.rs
tests/api/fixtures/: issue_closed.json  issue_comment_created.json  push.json  push_forced.json  push_without_commits.json  release_prereleased.json  release_released.json  workflow_run_completed_cancelled.json  workflow_run_completed_failure.json  workflow_run_completed_success.json
tests/api/snapshots/: api__webhook__force_push.snap  api__webhook__issue_closed.snap  api__webhook__issue_comment_created.snap  api__webhook__issue_opened.snap  api__webhook__push.snap  api__webhook__release_prereleased.snap  api__webhook__release_released.snap  api__webhook__workflow_run_completed_with_failure.snap  api__webhook__workflow_run_completed_with_success_sends_message_after_failure-2.snap  api__webhook__workflow_run_completed_with_success_sends_message_after_failure.snap
tests/webhook/: main.rs
tests/webhook/fixtures/: issue_comment_created.json  issue_opened.json  push.json
tests/webhook/snapshots/: webhook__issue_opened.snap  webhook__push.snap
